# authenticator

./: Dockerfile  README.md  client_secret.json  config.json  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: codeql-analysis.yml
authenticator/: app.py  config.ini  config.py  exceptions.py
authenticator/adapters/db/: api.py
authenticator/adapters/login/: README.md  google_adapter.py  loginmanager.py
authenticator/utils/: cryptic.py  utils.py
dags/: dag_demo.py  kub-dag.py  new_test_again_dag.py  new_test_dag.py  unpause_dag.py  unpause_dag_demo.py  unpause_dag_trial.py
docs/: README.md
tests/: test_authenticator.py
workflows/projects/firstproject/: test_script.py
